# ubicacion-servicio

./: .gitignore  Cargo.toml  README.md
catalogos/: cat_codigos_postales.csv  cat_estados.csv  cat_municipios.csv
migration/: Cargo.toml
migration/src/: lib.rs  m20250717_193532_crear_catalogos.rs
src/: main.rs
src/config/: cors.rs  mod.rs  swagger.rs
src/controllers/: catalogos.rs
src/entities/: cat_codigos_postales.rs  cat_estados.rs  cat_localidades.rs  cat_municipios.rs  mod.rs  prelude.rs
src/middleware/: jwt.rs
src/routes/: catalogos.rs  mod.rs
src/services/: catalogos_ubicacion.rs  mod.rs
src/types/: catalogos.rs  mod.rs
src/utils/: conversores.rs  jwt.rs  mod.rs
